# nexus-mcp

./: .env.example  .gitignore  ARCHITECTURE.md  IDEA.md  INTEGRATION.md  LICENSE  OPENSOURCE.md  PROGRESS.md  README.md  TODO.md  e2e_mcp_test.py  e2e_success.py  plan.md  pyproject.toml  test_graph.py
src/: index.py  server.py
src/core/: git_sandbox.py  lightning_optim.py
src/llm/: provider.py
src/nexus/: graph.py  state.py
src/nexus/nodes/: QA.py  coder.py  crew_executor.py  macro.py  planner.py
src/nexus/tools/: bash_safe.py
src/swarm/: graph.py
src/swarm/nodes/: QA.py  coder.py  crew_executor.py  macro.py  planner.py
src/swarm/tools/: fs.py
