[project]
name = "nexus-mcp"
version = "0.1.0"
description = "A Model-Agnostic, Git-Sandboxed Multi-Agent Nexus MCP Server."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp",
    "langgraph",
    "litellm",
    "pydantic",
    "agentlightning",
    "python-dotenv"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
nexus-mcp = "src.index:main"
